# sync_postgresql_fastapi

./: README.md  crud.http  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: task.py
